--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-TELEGRAM_TOKEN=TU_TOKEN_AQUI
+TELEGRAM_TOKEN=7790206865:AAFnaLZ01y9BIvOBt6kN2xRFSKS-064AYV4
 TELEGRAM_CHAT_ID=@kazama_signals_channel
